fix: Remplacement de toutes les URLs localhost par les URLs de production
- Remplacement de localhost:8081 par api.sunuid.fayma.sn dans tous les fichiers de test
- Mise à jour des URLs dans package.json, README.md, SECURE_INIT_GUIDE.md
- Correction automatique de tous les fichiers test*.html
- URLs de production maintenant utilisées partout
- Amélioration de la robustesse des URLs dans le SDK

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint src/**/*.js",
     "format": "prettier --write src/**/*.js",
     "serve": "python3 -m http.server 8080",
-    "demo": "open http://localhost:8080/examples/demo.html"
+            "demo": "open https://sunuid.fayma.sn/examples/demo.html"
   },
   "keywords": [
     "sunuid",
