--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sunuid-sdk",
-  "version": "1.0.33",
+  "version": "1.0.35",
   "type": "module",
   "description": "SDK JavaScript pour l'intégration des QR codes d'authentification et KYC SunuID",
   "main": "dist/sunuid-sdk.js",
@@ -19,8 +19,7 @@
     "lint": "eslint src/**/*.js",
     "format": "prettier --write src/**/*.js",
     "serve": "python3 -m http.server 8080",
-    "demo": "open https://sunuid.fayma.sn/examples/demo.html",
-    "verify-no-auto-publish": "./verify-no-auto-publish.sh"
+    "demo": "open http://localhost:8080/examples/demo.html"
   },
   "keywords": [
     "sunuid",
