fix: v1.0.37 - Correction vérification connexions API
- Changement GET vers POST pour endpoint /debug
- Ajout credentials dans requête de test
- Correction vérification statut API (success: true)
- Amélioration logs de debug pour statut API
- Meilleure traçabilité des problèmes de connexion

--- a/.gitignore
+++ b/.gitignore
@@ -1,112 +1,36 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Build outputs
-dist/
-build/
-
-# Test files (to prevent accidental commits)
-test*.html
-simple-test.html
-test-sdk.js
-TEST_REPORT.md
-cors-test.html
-test-sdk-load.html
-test-api-debug.html
-test-qr-generation.html
-test-qrcode-simple.html
-test-qr-step-by-step.html
-test-php-qr.html
-test-php-integration.html
-test-types.html
-test-api-code.html
-test-socket-id.html
-test-final-format.html
-test-partner-name.html
-test-api-partner-name.html
-test-loader-progressive.html
-test-socket-wait-type-names.html
-test-security-features.html
-test-secure-init.html
-test-fix-api.html
-test-debug-api.html
-test-simple-api.html
-test-cors.html
-test-final-fix.html
-test-minimal.html
-test-debug-console.html
-test-compare.html
-test-simple-debug.html
-test-final-success.html
-test-secure-fix.html
-test-secure-debug.html
-test-secure-simple.html
-test-secure-compare.html
-
-# PHP files
-qr-generator.php
-composer.json
+# Composer
+/vendor/
 composer.lock
-vendor/
 
-# Development files
-.serve/
-.DS_Store
-Thumbs.db
+# Logs
+*.log
+logs/
 
-# IDE files
+# Cache
+.phpunit.cache/
+coverage/
+
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 
-# Logs
-*.log
+# OS
+.DS_Store
+Thumbs.db
 
-# Environment variables
+# Generated files
+qr-code*.png
+*.png
+*.jpg
+*.jpeg
+
+# Environment
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.testing
 
 # Temporary files
 *.tmp
 *.temp
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Publication automatique - FICHIERS INTERDITS
-# Ces fichiers ne doivent JAMAIS être commités
-.npmrc
-.npmignore
-.npm-debug.log
-.npm-debug.log.*
-.npm-error.log
-.npm-error.log.*
-
-# CI/CD files that could cause auto-publish
-.github/workflows/publish.yml
-.github/workflows/release.yml
-.github/workflows/auto-publish.yml
-.github/workflows/deploy.yml
-
-# NPM credentials and tokens
-.npmrc.local
-.npmrc.production
-.npmrc.staging
-
-# Auto-publish scripts
-scripts/publish.sh
-scripts/auto-publish.sh
-scripts/deploy.sh
